# tlmc-helper

./: .gitignore  Cargo.toml  README.md  README_EN.md  flake.nix  task.md
.github/workflows/: ci.yml  web-pages.yml
doc/: data.md  extract-example.rs  rule-generation.md  split-flac.rs  tagging.md
docs/: data.md  folder-layout.md  web-implementation.md
src/: logger.rs  main.rs
testdata/[circle]/2026.01.01 [ABCD-0123] foo bar [c123]/: foo bar.cue
web/: README.md  index.html  package-lock.json  package.json  tsconfig.gui.json  tsconfig.json
web/docs/: compat-notes.md  gui-notes.md
web/src/cli/: analyze-albums.ts
web/src/core/: api.ts  logger.ts  name-utils.ts  path-parse.ts  rule-generation.ts
web/src/domain/: models.ts
web/src/gui/: App.tsx  main.tsx  opencc-js.d.ts  styles.css  types.d.ts
web/src/gui/components/: TagInput.tsx
web/src/gui/state/: editor.ts  sync.worker.ts
web/src/gui/utils/: json.ts
web/src/phases/: phase1-rewriting.ts  phase1-structured.ts  phase2-apply.ts  phase3-updates.ts
web/test/: analyze-albums-parity.test.ts
