[package]
name = "tlmc"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
audiotags = "0.5.0"
chardetng = "1.0.0"
encoding_rs = "0.8"
flac-codec = { version = "1.3.2", features = [ "rayon" ]}
id3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
unrar = "0.5"
walkdir = "2"

[patch.crates-io]
unrar = { git = "https://github.com/pca006132/unrar.rs" }
audiotags = { git = "https://github.com/pca006132/audiotags" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "split-album"
path = "src/bin/split-album.rs"

[[bin]]
name = "scan-albums"
path = "src/bin/scan-albums.rs"

[[bin]]
name = "analyze-albums"
path = "src/bin/analyze-albums.rs"

[[bin]]
name = "apply-tags"
path = "src/bin/apply-tags.rs"
